tests/snapshots/pager__pager_hits_mode.snap
---
source: tests/pager.rs
expression: rendered
---
== session: default ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "cat('# Title\\n'); for (i in 1:40) cat(sprintf('filler %02d xxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\n', i)); cat('## Alpha\\n'); for (i in 1:3) cat(sprintf('alpha configure %02d\\n', i)); cat('## Beta\\n'); for (i in 1:3) cat(sprintf('beta configure %02d\\n', i))\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "# Title\nfiller 01 xxxxxxxxxxxxxxxxxxxxxxxxxxxxx\nfiller 02 xxxxxxxxxxxxxxxxxxxxxxxxxxxxx\nfiller 03 xxxxxxxxxxxxxxxxxxxxxxxxxxxxx\nfiller 04 xxxxxxxxxxxxxxxxxxxxxxxxxxxxx\nfiller 05 xxxxxxxxxxxxxxxxxxxxxxxxxxxxx\nfiller 06 xxxxxxxxxxxxxxxxxxxxxxxxxxxxx\nfiller 07 xxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
    },
    {
      "type": "text",
      "text": "--More-- (5p, 16.5%, @0..288/1736)"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":hits configure\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "#1 @1617 Title > Alpha\n  > alpha configure 01"
    },
    {
      "type": "text",
      "text": "(END, 94.2%, @1617..1636/1736)"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":n\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "alpha configure 02\nalpha configure 03\n## Beta\nbeta configure 01\nbeta configure 02\nbeta configure 03"
    },
    {
      "type": "text",
      "text": "(END, 100.0%, @1636..1736/1736)"
    }
  ]
}
-- step 4 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":q\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "(END, 100.0%, @1636..1736/1736)"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
