tests/snapshots/pager__pager_matches_with_headings.snap
---
source: tests/pager.rs
expression: rendered
---
== session: default ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "cat('# Title\\n\\n## Alpha\\n'); for (i in 1:20) cat(sprintf('alpha line %02d foo\\n', i)); cat('\\n## Beta\\n'); for (i in 1:20) cat(sprintf('beta line %02d foo\\n', i))\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "# Title\n\n## Alpha\nalpha line 01 foo\nalpha line 02 foo\nalpha line 03 foo\nalpha line 04 foo\nalpha line 05 foo\nalpha line 06 foo\nalpha line 07 foo\nalpha line 08 foo\nalpha line 09 foo\nalpha line 10 foo\nalpha line 11 foo\nalpha line 12 foo\nalpha line 13 foo\nalpha line 14 foo\nalpha line 15 foo"
    },
    {
      "type": "text",
      "text": "--More-- (2p, 39.6%, @0..288/727)"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":matches foo\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[pager] matches: 40 (limit 50); use `:matches -n all`, `:goto N`, or `:n`/`:p`"
    },
    {
      "type": "text",
      "text": "#1 @32 Title > Alpha | alpha line 01 foo\n#2 @50 Title > Alpha | alpha line 02 foo\n#3 @68 Title > Alpha | alpha line 03 foo\n#4 @86 Title > Alpha | alpha line 04 foo\n#5 @104 Title > Alpha | alpha line 05 foo\n#6 @122 Title > Alpha | alpha line 06 foo\n#7 @140 Title > Alpha | alpha line 07 foo\n#8 @158 Title > Alpha | alpha line 08 foo\n#9 @176 Title > Alpha | alpha line 09 foo\n#10 @194 Title > Alpha | alpha line 10 foo\n#11 @212 Title > Alpha | alpha line 11 foo\n#12 @230 Title > Alpha | alpha line 12 foo\n#13 @248 Title > Alpha | alpha line 13 foo\n#14 @266 Title > Alpha | alpha line 14 foo\n#15 @284 Title > Alpha | alpha line 15 foo\n#16 @302 Title > Alpha | alpha line 16 foo\n#17 @320 Title > Alpha | alpha line 17 foo\n#18 @338 Title > Alpha | alpha line 18 foo\n#19 @356 Title > Alpha | alpha line 19 foo\n#20 @374 Title > Alpha | alpha line 20 foo\n#21 @400 Title > Beta | beta line 01 foo\n#22 @417 Title > Beta | beta line 02 foo\n#23 @434 Title > Beta | beta line 03 foo\n#24 @451 Title > Beta | beta line 04 foo\n#25 @468 Title > Beta | beta line 05 foo\n#26 @485 Title > Beta | beta line 06 foo\n#27 @502 Title > Beta | beta line 07 foo\n#28 @519 Title > Beta | beta line 08 foo\n#29 @536 Title > Beta | beta line 09 foo\n#30 @553 Title > Beta | beta line 10 foo\n#31 @570 Title > Beta | beta line 11 foo\n#32 @587 Title > Beta | beta line 12 foo\n#33 @604 Title > Beta | beta line 13 foo\n#34 @621 Title > Beta | beta line 14 foo\n#35 @638 Title > Beta | beta line 15 foo\n#36 @655 Title > Beta | beta line 16 foo\n#37 @672 Title > Beta | beta line 17 foo\n#38 @689 Title > Beta | beta line 18 foo\n#39 @706 Title > Beta | beta line 19 foo\n#40 @723 Title > Beta | beta line 20 foo"
    },
    {
      "type": "text",
      "text": "--More-- (2p, 39.6%, @0..288/727)"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":matches -C 1 foo\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[pager] matches: 40 (limit 50); use `:matches -n all`, `:goto N`, or `:n`/`:p`"
    },
    {
      "type": "text",
      "text": "#1 @32 Title > Alpha\n    ## Alpha\n  > alpha line 01 foo\n    alpha line 02 foo\n#2 @50 Title > Alpha\n    alpha line 01 foo\n  > alpha line 02 foo\n    alpha line 03 foo\n#3 @68 Title > Alpha\n    alpha line 02 foo\n  > alpha line 03 foo\n    alpha line 04 foo\n#4 @86 Title > Alpha\n    alpha line 03 foo\n  > alpha line 04 foo\n    alpha line 05 foo\n#5 @104 Title > Alpha\n    alpha line 04 foo\n  > alpha line 05 foo\n    alpha line 06 foo\n#6 @122 Title > Alpha\n    alpha line 05 foo\n  > alpha line 06 foo\n    alpha line 07 foo\n#7 @140 Title > Alpha\n    alpha line 06 foo\n  > alpha line 07 foo\n    alpha line 08 foo\n#8 @158 Title > Alpha\n    alpha line 07 foo\n  > alpha line 08 foo\n    alpha line 09 foo\n#9 @176 Title > Alpha\n    alpha line 08 foo\n  > alpha line 09 foo\n    alpha line 10 foo\n#10 @194 Title > Alpha\n    alpha line 09 foo\n  > alpha line 10 foo\n    alpha line 11 foo\n#11 @212 Title > Alpha\n    alpha line 10 foo\n  > alpha line 11 foo\n    alpha line 12 foo\n#12 @230 Title > Alpha\n    alpha line 11 foo\n  > alpha line 12 foo\n    alpha line 13 foo\n#13 @248 Title > Alpha\n    alpha line 12 foo\n  > alpha line 13 foo\n    alpha line 14 foo\n#14 @266 Title > Alpha\n    alpha line 13 foo\n  > alpha line 14 foo\n    alpha line 15 foo\n#15 @284 Title > Alpha\n    alpha line 14 foo\n  > alpha line 15 foo\n    alpha line 16 foo\n#16 @302 Title > Alpha\n    alpha line 15 foo\n  > alpha line 16 foo\n    alpha line 17 foo\n#17 @320 Title > Alpha\n    alpha line 16 foo\n  > alpha line 17 foo\n    alpha line 18 foo\n#18 @338 Title > Alpha\n    alpha line 17 foo\n  > alpha line 18 foo\n    alpha line 19 foo\n#19 @356 Title > Alpha\n    alpha line 18 foo\n  > alpha line 19 foo\n    alpha line 20 foo\n#20 @374 Title > Alpha\n    alpha line 19 foo\n  > alpha line 20 foo\n    \n#21 @400 Title > Beta\n    ## Beta\n  > beta line 01 foo\n    beta line 02 foo\n#22 @417 Title > Beta\n    beta line 01 foo\n  > beta line 02 foo\n    beta line 03 foo\n#23 @434 Title > Beta\n    beta line 02 foo\n  > beta line 03 foo\n    beta line 04 foo\n#24 @451 Title > Beta\n    beta line 03 foo\n  > beta line 04 foo\n    beta line 05 foo\n#25 @468 Title > Beta\n    beta line 04 foo\n  > beta line 05 foo\n    beta line 06 foo\n#26 @485 Title > Beta\n    beta line 05 foo\n  > beta line 06 foo\n    beta line 07 foo\n#27 @502 Title > Beta\n    beta line 06 foo\n  > beta line 07 foo\n    beta line 08 foo\n#28 @519 Title > Beta\n    beta line 07 foo\n  > beta line 08 foo\n    beta line 09 foo\n#29 @536 Title > Beta\n    beta line 08 foo\n  > beta line 09 foo\n    beta line 10 foo\n#30 @553 Title > Beta\n    beta line 09 foo\n  > beta line 10 foo\n    beta line 11 foo\n#31 @570 Title > Beta\n    beta line 10 foo\n  > beta line 11 foo\n    beta line 12 foo\n#32 @587 Title > Beta\n    beta line 11 foo\n  > beta line 12 foo\n    beta line 13 foo\n#33 @604 Title > Beta\n    beta line 12 foo\n  > beta line 13 foo\n    beta line 14 foo\n#34 @621 Title > Beta\n    beta line 13 foo\n  > beta line 14 foo\n    beta line 15 foo\n#35 @638 Title > Beta\n    beta line 14 foo\n  > beta line 15 foo\n    beta line 16 foo\n#36 @655 Title > Beta\n    beta line 15 foo\n  > beta line 16 foo\n    beta line 17 foo\n#37 @672 Title > Beta\n    beta line 16 foo\n  > beta line 17 foo\n    beta line 18 foo\n#38 @689 Title > Beta\n    beta line 17 foo\n  > beta line 18 foo\n    beta line 19 foo\n#39 @706 Title > Beta\n    beta line 18 foo\n  > beta line 19 foo\n    beta line 20 foo\n#40 @723 Title > Beta\n    beta line 19 foo\n  > beta line 20 foo"
    },
    {
      "type": "text",
      "text": "--More-- (2p, 39.6%, @0..288/727)"
    }
  ]
}
-- step 4 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":q\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "(END, 39.6%, @0..288/727)"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
